--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="src/js/data.js"></script>
     <script src="src/js/utils.js"></script>
     <script src="src/js/auth.js"></script>
+    <script src="src/js/session.js"></script>
     <script src="src/js/customer.js"></script>
     <script src="src/js/admin.js"></script>
     <script src="src/js/app.js"></script>
